tests/ingress/00-application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses
spec:
  image: image
  port: 8080
  ingresses:
    - example.com
