tests/ingress/00-ingresses.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  namespace: istio-system
  name: test-cert
spec:
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: test-cert
  dnsNames:
    - test.com
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    ingress: external
  servers:
    - hosts:
        - test.com
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - test.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: test-cert
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-vs
spec:
  exportTo:
    - .
    - istio-system
  gateways:
    - random-ingress
  hosts:
    - test.com
  http:
    - route:
        - destination:
            host: test
