tests/ingress/01-application-change-ingress.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses
spec:
  image: image
  port: 8080
  ingresses:
    - test.com
  redirectToHTTPS: true
