tests/ingress/03-delete-application.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: ingresses
