tests/ingress/03-test.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl get gateways,certificates,virtualservices,applications.skiperator.kartverket.no --all-namespaces
    namespaced: false
