tests/ingress/02-assert.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  namespace: istio-gateways
  name: test-ingresses-ingress-56cd7aa901014e78
spec:
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: test-ingresses-ingress-56cd7aa901014e78
  dnsNames:
    - example.com
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingresses-ingress-56cd7aa901014e78
spec:
  selector:
    app: istio-ingress-external
  servers:
    - hosts:
        - example.com
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: test-ingresses-ingress-56cd7aa901014e78
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingresses-ingress
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  gateways:
    - ingresses-ingress-56cd7aa901014e78
  hosts:
    - example.com
  http:
    - route:
        - destination:
            host: ingresses
