tests/ingress/02-errors.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  namespace: istio-gateways
  name: test-ingresses-ingress-56cd7aa901014e78
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingresses-http-redirect
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: ingresses-ingress-56cd7aa901014e78
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: ingresses-ingress

# These two should be deleted but are not during tests. Works fine locally.
